--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,20 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/nav_edit_text"
+            android:icon="@drawable/ic_menu_edit_text"
+            android:title="@string/menu_edit_text" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/ic_menu_shack_bar"
+            android:title="@string/menu_snack_bar" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/ic_menu_bottom_sheet"
+            android:title="@string/menu_bottom_sheet" />
+        <item
+            android:id="@+id/nav_buttons"
+            android:icon="@drawable/ic_menu_buttons"
+            android:title="@string/menu_buttons" />
     </group>
 </menu>
