--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -13,6 +13,7 @@
         android:text = "@string/flat_button_text_view" />
 
     <Button
+        android:id="@+id/fragment_buttons_button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/flat_button"
