--- a/app/src/main/res/layout/activity_toolbar_back.xml
+++ b/app/src/main/res/layout/activity_toolbar_back.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ToolbarBackActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/activity_toolbar_text_view"
+        android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
