--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -14,11 +14,11 @@
 
     <Button
         android:id="@+id/fragment_buttons_button_1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/flat_button"
         android:layout_margin="@dimen/buttons_padding"
-        android:text="@string/button_text" />
+        android:text="@string/button_open_activity" />
 
     <Button
         style="?attr/borderlessButtonStyle"
