--- a/app/src/main/res/layout/fragment_progressbar.xml
+++ b/app/src/main/res/layout/fragment_progressbar.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ui.progressbar.ProgressbarFragment">
+
+    <Button
+        android:id="@+id/fragment_progressbar_button_show"
+        android:text="@string/button_show_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:layout_margin="@dimen/buttons_padding"/>
+
+    <Button
+        android:id="@+id/fragment_progressbar_button_hide"
+        android:text="@string/button_hide_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/buttons_padding"/>
+
+    <ProgressBar
+        android:id="@+id/fragment_progressbar_progress_round"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/buttons_padding"/>
+
+    <ProgressBar
+        android:id="@+id/fragment_progressbar_progress_line"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:indeterminate="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/buttons_padding"/>
+
+</LinearLayout>
