--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="edit_text_padding">8dp</dimen>
     <dimen name="buttons_padding">8dp</dimen>
+    <dimen name="toolbar_height">250dp</dimen>
 </resources>
