--- a/app/src/main/res/layout/item_card_for_recycler_view.xml
+++ b/app/src/main/res/layout/item_card_for_recycler_view.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:clipToPadding="false"
@@ -10,7 +10,7 @@
     app:cardElevation="8dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/edit_text_padding"
             android:textSize="@dimen/text_size_regular"
-            tools:text="Клубника" />
+            tools:text="Монстр" />
 
     </LinearLayout>
 
