--- a/app/src/main/res/layout/activity_collapsing_content.xml
+++ b/app/src/main/res/layout/activity_collapsing_content.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.fab_behavior.FabBehaviorFragment"
     tools:showIn="@layout/activity_collapsing_content">
@@ -11,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/edit_text_padding"
+        android:layout_margin="@dimen/text_margin"
         android:text="@string/big_text" />
 
 </androidx.core.widget.NestedScrollView>
