--- a/app/src/main/res/layout/fragment_fab_behavior.xml
+++ b/app/src/main/res/layout/fragment_fab_behavior.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.fab_behavior.FabBehaviorFragment">
 
     <include layout="@layout/activity_collapsing_content" />
