--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,10 @@
     <dimen name="edit_text_padding">8dp</dimen>
     <dimen name="buttons_padding">8dp</dimen>
     <dimen name="toolbar_height">250dp</dimen>
+    <dimen name="appbar_padding">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
     <!-- Text sizes -->
     <dimen name="text_size_regular">16sp</dimen>
+    <dimen name="layout_padding_top">16dp</dimen>
 </resources>
